--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   path_provider: any
   flutter_local_notifications: ^9.0.0
   image_picker: ^0.8.4+4
+  geolocator: ^10.1.0
 
 dev_dependencies:
   flutter_test:
